refactor : LineTest 리팩토링